<resources>
    <string name="app_name">CustomView</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="recognize_title">识别中</string>
    <string name="speak_title">请讲话</string>
    <string name="recognize_err">识别错误...</string>
    <string name="speak_null">您好像没有说话哦...</string>
    <string name="net_err">网络未连接哦...</string>
    <string name="speak_null_toast">您好像还没有说话哦!</string>
    <string name="net_err_toast">请连接网络再试!</string>
    <string name="recognize_err_toast">识别错误，请重试！</string>

    <string name="download_title">下载中</string>

    <string name="progress_bar_item">Custom ProgressBar</string>
    <string name="draw_view_item">Draw View</string>
    <string name="virtual_num_keyboard_item">Virtual KeyBoard</string>
    <string name="shape_view_item">Shape View</string>
    <string name="task_download">Download</string>
    <string name="msg_title">温馨提示</string>
    <string name="look_raw">您想查看原图吗？</string>
    <string name="look_cut">您想查看裁剪图吗？</string>
    <string name="look_scale">您想查看缩放图吗？</string>
    <string name="take_photo">您想拍照吗？</string>
    <string name="canvas_view">Canvas View</string>
    <string name="anim_view">Animation</string>
    <string name="drag_view">Drag View</string>
    <string name="photo_view">Photo View</string>
    <string name="vedio_player">Vedio Player</string>
    <string name="chart_view">Chart View</string>
    <string name="opengl_3d">OpenGL 3D</string>
    <string name="circle_menu">Circle Menu</string>
    <string name="anim_bottom">Anim Bottom</string>
    <string name="coupon_view">Coupon or Vip</string>
    <string name="like_view">Like or Thumb Up</string>
    <string name="ruler_view">Ruler</string>
    <string name="flip_view">Flip View</string>
    <string name="wave_view">Wave View</string>
    <string name="banner_view">Banner View</string>
    <string name="anim_clicked_me">Click me</string>
    <string name="start_anim">Startup...</string>
    <string name="anim_shopping">Shopping</string>
    <string name="title_activity_photo_view">PhotoViewActivity</string>
    <string name="title_activity_media_player">MediaPlayerActivity</string>
    <string name="action_send">发送</string>
    <string name="vedio_danmuku_hint">快来说点什么吧</string>
    <string name="title_activity_chart">ChartActivity</string>
    <string name="chart_radar">Radar</string>
    <string name="chart_line">Line</string>
    <string name="chart_bar">Bar</string>
    <string name="chart_bubble">Bubble</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_open_gl">OpenGLActivity</string>
    <string name="open_gl_none">不支持OPENGL</string>
    <string name="title_activity_circle_menu">CircleMenuActivity</string>
    <string name="title_activity_bottom_bar">BottomBarActivity</string>
    <string name="circle_menu_center">取消</string>
    <string name="circle_menu_top">设备</string>
    <string name="circle_menu_bottom">删除</string>
    <string name="circle_menu_left">详情</string>
    <string name="circle_menu_right">平面图</string>
    <string name="title_brige">魂断蓝桥</string>
    <string name="title_night">夜泊秦淮近酒家</string>
    <string name="title_animal">商女不知亡国恨</string>
    <string name="title_ocean">精卫填海</string>
    <string name="title_mountain">山外有山</string>
    <string name="title_road">走的人多了就有了路</string>
</resources>
